appId: com.qazandoqafood
---
- tapOn: Selecione seu endereço...
- tapOn: PERMITIR
- tapOn: Pastelaria da Maria
